--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-  background: #fafafa;
+  background: #000000;
   min-height: 100%;
   font-family: "Arial", sans-serif;
 }
